Bugfix: remove extra margin at end of frontpage spotlight
The new theme already adds padding, this removes the now extra padding.

--- a/css/all/www-all-front.css
+++ b/css/all/www-all-front.css
@@ -940,8 +940,6 @@
   width: 422px;
   min-width: 422px;
   max-width: 422px;
-
-  margin-bottom: 15px;
 }
 
 
